--- a/servicos_react/src/App.css
+++ b/servicos_react/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.content-wrap {
+  flex: s1;
+}
+
+.justificar{
+  text-align: justify;
+}
